--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
     <div class="custom-div">
 
         <h1 class="custom-text">Weather App</h1>
-        <hr>
-
-        <div style="color: rgb(245, 53, 53); font-size: x-large;" id="message"></div><br>
 
         <form id="cityForm">
             <input type="text" id="city" placeholder="Enter City " class="mt-1 p-2 border rounded-md">
             <button type="submit" class="mt-2 bg-blue-500 text-white px-4 py-2 rounded-md">Get Weather</button>
         </form>
-
-        <div id="container" class="w-full max-w-md bg-white p-4">
+        
+        <div id="container">
+            <div style="color: rgb(245, 53, 53); font-size: x-large;" id="message"></div>
         </div>
     </div>
     <script src="app.js"></script>
